Adiciona Vercel Analytics e ajusta script para type='module'

--- a/cadastro.html
+++ b/cadastro.html
@@ -79,6 +79,6 @@
         </div>
     </main>
 
-    <script src="script.js" defer></script>
+    <script src="script.js" defer type="module"></script>
 </body>
 </html>
