--- a/trilha.html
+++ b/trilha.html
@@ -135,7 +135,7 @@
         <p>&copy; 2025 Guia BSI. Todos os direitos reservados.</p>
     </footer>
 
-    <script src="script.js" defer></script>
-    <script src="trilha.js" defer></script>
+    <script src="script.js" defer type="module"></script>
+    <script src="trilha.js" defer type="module"></script>
 </body>
 </html>
