--- a/comparativo-cursos.html
+++ b/comparativo-cursos.html
@@ -267,6 +267,6 @@
         <div class="chat-input-container"><input type="text" id="chat-input" placeholder="Digite sua pergunta..."></div>
     </div>
 
-    <script src="script.js" defer></script>
+    <script src="script.js" defer type="module"></script>
 </body>
 </html>
