--- a/index.html
+++ b/index.html
@@ -145,6 +145,6 @@
         <div id="chat-messages"><div class="message ai-message">Olá! Sou o assistente virtual do Guia BSI. Como posso ajudar? Pergunte sobre salário, mercado, matérias, etc.</div></div>
         <div class="chat-input-container"><input type="text" id="chat-input" placeholder="Digite sua pergunta..."></div>
     </div>
-    <script src="script.js" defer></script>
+    <script src="script.js" defer type="module"></script>
 </body>
 </html>
