--- a/login.html
+++ b/login.html
@@ -58,6 +58,6 @@
         </div>
     </main>
 
-    <script src="script.js" defer></script>
+    <script src="script.js" defer type="module"></script>
 </body>
 </html>
