--- a/perfil.html
+++ b/perfil.html
@@ -131,6 +131,6 @@
         </div>
     </main>
 
-    <script src="script.js" defer></script>
+    <script src="script.js" defer type="module"></script>
 </body>
 </html>
