--- a/sobre-bsi.html
+++ b/sobre-bsi.html
@@ -161,6 +161,6 @@
     <div id="ai-chat-window" class="glass-panel" style="display: none;"><div class="chat-header glass-panel"><h3>Assistente BSI</h3><span id="close-chat">&times;</span></div><div id="chat-messages"><div class="message ai-message">Olá! Sou o assistente virtual do Guia BSI. Como posso ajudar?</div></div><div class="chat-input-container"><input type="text" id="chat-input" placeholder="Digite sua pergunta..."></div></div>
     
 
-    <script src="script.js" defer></script>
+    <script src="script.js" defer type="module"></script>
 </body>
 </html>
