versão atualizada alfa

--- a/cadastro.html
+++ b/cadastro.html
@@ -26,6 +26,7 @@
                 <li><a href="sobre-bsi.html">O que é BSI?</a></li>
                 <li><a href="mercado-trabalho.html">Mercado de Trabalho</a></li>
                 <li><a href="comparativo-cursos.html">BSI é Comparativos</a></li>
+                <li><a href="trilha.html">Guia de Carreira</a></li>
             </ul>
         </nav>
 
