--- a/sobre-bsi.html
+++ b/sobre-bsi.html
@@ -34,6 +34,7 @@
                     <li><a href="sobre-bsi.html" class="active">O que é BSI?</a></li>
                     <li><a href="mercado-trabalho.html">Mercado de Trabalho</a></li>
                     <li><a href="comparativo-cursos.html">BSI é Comparativos</a></li>
+                    <li><a href="trilha.html">Guia de Carreira</a></li>
                 </ul>
             </nav>
             <button id="mobile-nav-toggle" aria-label="Abrir menu">
@@ -161,6 +162,6 @@
     <div id="ai-chat-window" class="glass-panel" style="display: none;"><div class="chat-header glass-panel"><h3>Assistente BSI</h3><span id="close-chat">&times;</span></div><div id="chat-messages"><div class="message ai-message">Olá! Sou o assistente virtual do Guia BSI. Como posso ajudar?</div></div><div class="chat-input-container"><input type="text" id="chat-input" placeholder="Digite sua pergunta..."></div></div>
     
 
-    <script src="script.js" defer type="module"></script>
+    <script src="script.js" defer></script>
 </body>
 </html>
