--- a/comparativo-cursos.html
+++ b/comparativo-cursos.html
@@ -13,15 +13,7 @@
         <div id="stars3"></div>
     </div>
 
-    <section class="hero-section glass-panel">
-        <div class="hero-content-wrapper">
-            <img src="logo.svg" alt="Logo Guia BSI" class="hero-logo">
-            <div class="hero-text">
-                <h2>Sua Carreira em Tecnologia, com Liberdade para Viver Onde Quiser.</h2>
-                <p>Descubra a graduação com alta demanda, salários atrativos e a flexibilidade do trabalho remoto.</p>
-            </div>
-        </div>
-    </section>
+    
 
     <header>
         <div class="header-inner">
@@ -52,6 +44,16 @@
             </div>
         </div>
     </header>
+
+    <section class="hero-section glass-panel">
+    <div class="hero-content-wrapper">
+        <img src="logo.svg" alt="Logo Guia BSI" class="hero-logo">
+        <div class="hero-text">
+            <h2>BSI vs. Outros Cursos de TI</h2>
+            <p>Entenda as diferenças entre BSI, Ciência da Computação e Engenharia de Software.</p>
+        </div>
+    </div>
+</section>
 
     <main>
         <section class="page-title">
