--- a/sobre-bsi.html
+++ b/sobre-bsi.html
@@ -46,14 +46,14 @@
     </header>
 
     <section class="hero-section glass-panel">
-        <div class="hero-content-wrapper">
-            <img src="logo.svg" alt="Logo Guia BSI" class="hero-logo">
-            <div class="hero-text">
-                <h2>Sua Carreira em Tecnologia, com Liberdade para Viver Onde Quiser.</h2>
-                <p>Descubra a graduação com alta demanda, salários atrativos e a flexibilidade do trabalho remoto.</p>
-            </div>
+    <div class="hero-content-wrapper">
+        <img src="logo.svg" alt="Logo Guia BSI" class="hero-logo">
+        <div class="hero-text">
+            <h2>O que é Sistemas de Informação?</h2>
+            <p>Entenda o curso que conecta a tecnologia aos negócios e transforma dados em soluções.</p>
         </div>
-    </section>
+    </div>
+</section>
 
     <main>
         <section class="page-title">
