--- a/mercado-trabalho.html
+++ b/mercado-trabalho.html
@@ -13,16 +13,7 @@
         <div id="stars3"></div>
     </div>
 
-    <section class="hero-section glass-panel">
-        <div class="hero-content-wrapper">
-            <img src="logo.svg" alt="Logo Guia BSI" class="hero-logo">
-            <div class="hero-text">
-                <h2>Sua Carreira em Tecnologia, com Liberdade para Viver Onde Quiser.</h2>
-                <p>Descubra a graduação com alta demanda, salários atrativos e a flexibilidade do trabalho remoto.</p>
-            </div>
-        </div>
-    </section>
-
+    
     <header>
         <div class="header-inner">
             <a href="index.html" class="logo-link">
@@ -52,6 +43,16 @@
             </div>
         </div>
     </header>
+
+    <section class="hero-section glass-panel">
+    <div class="hero-content-wrapper">
+        <img src="logo.svg" alt="Logo Guia BSI" class="hero-logo">
+        <div class="hero-text">
+            <h2>Mercado de Trabalho e Carreira</h2>
+            <p>Salários altos, alta demanda e oportunidades globais. Veja onde você pode chegar.</p>
+        </div>
+    </div>
+</section>
 
     <main>
         <section class="page-title">
