--- a/perfil.html
+++ b/perfil.html
@@ -69,6 +69,13 @@
                     </div>
                 </div>
 
+                <div class="profile-section">
+                    <h4>Ações</h4>
+                    <div class="profile-actions">
+                         <a href="contato.html" class="button-secondary" style="text-decoration:none; display:inline-block;">Fale Conosco</a>
+                    </div>
+                </div>
+
                 <div class="profile-section danger-zone">
                     <h4>Zona de Perigo</h4>
                     <button class="button-danger" id="delete-account-btn">Deletar Minha Conta</button>
