--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
                         <li><a href="sobre-bsi.html">O que é BSI?</a></li>
                         <li><a href="mercado-trabalho.html">Mercado de Trabalho</a></li>
                         <li><a href="comparativo-cursos.html">BSI é Comparativos</a></li>
-                        <li><a href="trilha.html">Guia de Carreira</a></li>
-                        <li><a href="admin.html" id="admin-link-nav" style="display: none; color: var(--danger-color-light);">Admin</a></li>
+                        <!--<li><a href="trilha.html">Guia de Carreira</a></li>-->
+                        <!--<li><a href="admin.html" id="admin-link-nav" style="display: none; color: var(--danger-color-light);">Admin</a></li>-->
                     </ul>
                 </nav>
                 <button id="mobile-nav-toggle" aria-label="Abrir menu">
