--- a/sobre-bsi.html
+++ b/sobre-bsi.html
@@ -26,7 +26,7 @@
                     <li><a href="sobre-bsi.html" class="active">O que é BSI?</a></li> 
                     <li><a href="mercado-trabalho.html">Mercado de Trabalho</a></li>
                     <li><a href="comparativo-cursos.html">BSI é Comparativos</a></li>
-                    <li><a href="trilha.html">Guia de Carreira</a></li>
+                    <!--<li><a href="trilha.html">Guia de Carreira</a></li>-->
                 </ul>
             </nav>
             <button id="mobile-nav-toggle" aria-label="Abrir menu">
