Comment out login link and logout button
Comment out the login link and logout button in the header.

--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
                     <span class="bar"></span><span class="bar"></span><span class="bar"></span>
                 </button>
                 <div class="header-actions">
-                    <a href="login.html" class="login-link-nav">Login</a>
+                    <!--<a href="login.html" class="login-link-nav">Login</a>
                     <a href="perfil.html" id="header-avatar-link" class="profile-link-nav" style="display: none;">
                         <div id="header-avatar-display" class="header-avatar">
                         </div> </a>
-                    <a href="#" id="logout-btn" class="logout-link-nav" style="display: none;">Sair</a>
+                    <a href="#" id="logout-btn" class="logout-link-nav" style="display: none;">Sair</a>-->
                     <button id="theme-toggle">Modo Escuro</button>
                 </div>
             </div>
